didn't check large screen sizes: fixed prev-wrap in preview.css, added min-width and max-width to prev-wrapper

--- a/src/app/styles/preview.css
+++ b/src/app/styles/preview.css
@@ -1,5 +1,7 @@
 #prev-wrapper {
   overflow: hidden;
+  min-width: 400px;
+  max-width: 50%;
 }
 
 #preview-content {
